2012-08-02  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* Delete matlab/engopts.sh:

	- It's a relic, we no longer use Matlab's mex function to compile
	our mex files.

	* Add cpp/src/third-party/CGAL-4.0.2:

	- Third party library. CGAL is the Computational Geometry
	Algorithms Library. It provides meshing and triangulation
	capabilities, although at this point we just want to use it to
	query whether points are inside or outside a polyhedron.

	Downloaded from

	http://www.cgal.org/download.html

2012-07-12  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* matlab/ItkToolbox/CMakeLists.txt: (v0.5.0)
	* matlab/ItkToolbox/ItkImFilter.cpp: (v1.0.0)

	- Full rewrite of the architecture.

	- Now we admit input images with dimensions from 2 to 5.

	- Many layers of the architecture have been removed, to simplify
	the program. Now we have the parsers to connect Matlab runtime
	variables followed by a FilterWrapper. The FilterWrapper is a
	class so that we can use template partial specialisation and write
	an implementation for each filter. Also, if a filter doesn't
	accept a certain dimension or input type, we can deal with it this
	way.

	- We now use the new MatlabImportFilter and MatlabExportFilter
	interfaces to deal with the lists of input and output arguments.

	- We no longer have the Nrrd class. Instead, we have a
	MatlabImageHeader class that parses the metainformation of input
	images.

	- Now we can have vectors as input arguments.

	- We can also deal with output vector images, as with the last
	version, but now in a simple single method.

	* matlab/ItkToolbox/MatlabImageHeader.h: (v0.1.0)
	* matlab/ItkToolbox/MatlabImageHeader.cxx: (v0.1.0)

	- Class to provide an interface to read the metadata from a an
	input image. This allows to create a header class that can be used
	to deal with the image more easily.

	* Add matlab/ItkToolbox/MatlabExportFilter.h: (v0.1.0)
	* Add matlab/ItkToolbox/MatlabExportFilter.hxx: (v0.1.0)
