@@ -1,15 +1,17 @@
-function im2 = blockproc3(im, blksz, fun, border, useparallel)
-% BLOCKPROC3  Block processing for a 3D image
+function scimat2 = scimat_blockproc3(scimat, blksz, fun, border, useparallel)
+% SCIMAT_BLOCKPROC3  Block processing for a 3D SCI MAT volume
 %
 % Sometimes images are too large to be processed in one block. Matlab
 % provides function blockproc(), that works on 2D images only. This
-% blockproc3() function, on the other hand, works also with 3D images.
+% scimat_blockproc3() function, on the other hand, works also with 3D SCI
+% MAT images.
 %
-% IM2 = blockproc3(IM, BLKSZ, FUN)
+% SCIMAT2 = scimat_blockproc3(SCIMAT, BLKSZ, FUN)
 %
-%   IM is a 2D or 3D-array with the input grayscale image.
+%   SCIMAT is a 2D or 3D SCI MAT volume with the input grayscale image.
 %
-%   IM2 is the ouput image, processed by blocks, with the same size as IM.
+%   SCIMAT2 is the ouput image, processed by blocks, with the same size as
+%   SCIMAT.
 %
 %   BLKSZ is a 2- or 3-vector with the size of the blocks the image will be
 %   split into. The last block in every row, column and slice will be
@@ -18,19 +20,19 @@ function im2 = blockproc3(im, blksz, fun, border, useparallel)
 %   FUN is a function handle. This is the processing applied to every
 %   block.
 %
-% IM2 = blockproc3(IM, BLKSZ, FUN, BORDER)
+% SCIMAT2 = scimat_blockproc3(SCIMAT, BLKSZ, FUN, BORDER)
 %
 %  BORDER is a 2- or 3-vector with the size of the border around each
 %  block. Basically, each block size will be grown by this amount, the
 %  block processed, and then the border cut off from the solution. This is
-%  useful to avoid "seams" in IM2.
+%  useful to avoid "seams" in SCIMAT2.
 %
 % Example:
 %
 %       fun = @(x) deconvblind(x, ones(20, 20, 10));
 %       im2 = blockproc3d(im, [256 256 128], fun, [30 30 10]);
 %
-% IM2 = blockproc3(..., PARALLEL)
+% SCIMAT2 = scimat_blockproc3(..., PARALLEL)
 %
 %   PARALLEL is a boolean flag to activate parallel processing if the
 %   Parallel Computing Toolbox is available, and a worker pool has been
@@ -58,11 +60,11 @@ function im2 = blockproc3(im, blksz, fun, border, useparallel)
 %      matlabpool close
 %
 %
-% See also: blockproc, scimat_blockproc3.
+% See also: blockproc, blockproc3.
 
 % Author: Ramon Casero <rcasero@gmail.com>
 % Copyright © 2011 University of Oxford
-% Version: 0.2.1
+% Version: 0.1.0
 % $Rev$
 % $Date$
 % 
@@ -95,7 +97,7 @@ error(nargoutchk(0, 1, nargout, 'struct'));
 
 % defaults
 if isempty(blksz)
-    blksz = size(im);
+    blksz = size(scimat.data);
 end
 if (nargin < 4) || isempty(border)
     border = [0 0 0];
@@ -111,7 +113,7 @@ if (length(blksz) < 3)
 end
 
 % image size
-imsz = size(im);
+imsz = size(scimat.data);
 
 % block limits without the extra borders...
 
@@ -146,7 +148,7 @@ NC = length(c0);
 NS = length(s0);
 
 % init output
-im2 = im;
+scimat2 = scimat;
 
 
 if (useparallel) % parallel processing
@@ -161,11 +163,10 @@ if (useparallel) % parallel processing
         for J = 1:NC
             for I = 1:NR
                 idx = sub2ind([NR, NC, NS], I, J, K);
-                blocks{idx} = im(...
-                        br0(I):brx(I), ...
-                        bc0(J):bcx(J), ...
-                        bs0(K):bsx(K) ...
-                        );
+                blocks{idx} = scinrrd_crop(scimat, ...
+                    [br0(I) bc0(J) bs0(K)], ...
+                    [brx(I) bcx(J) bsx(K)] ...
+                    );
             end
         end
     end
@@ -184,12 +185,12 @@ if (useparallel) % parallel processing
         [I, J, K] = ind2sub([length(br0), length(bc0), length(bs0)], B);
 
         % assign result to output removing the borders
-        im2(...
+        scimat2.data(...
             r0(I):rx(I), ...
             c0(J):cx(J), ...
             s0(K):sx(K) ...
             ) ...
-            = blocks{B}(...
+            = blocks{B}.data(...
             r0(I)-br0(I)+1:rx(I)-br0(I)+1, ...
             c0(J)-bc0(J)+1:cx(J)-bc0(J)+1, ...
             s0(K)-bs0(K)+1:sx(K)-bs0(K)+1 ...
@@ -205,24 +206,37 @@ else % single processor (we save memory by not creating a cell vector with all t
             for K = 1:NS
 
                 % process current image block
-                aux = fun(im(...
-                    br0(I):brx(I), ...
-                    bc0(J):bcx(J), ...
-                    bs0(K):bsx(K) ...
+                aux = fun(scinrrd_crop(scimat, ...
+                    [br0(I) bc0(J) bs0(K)], ...
+                    [brx(I) bcx(J) bsx(K)] ...
                     ));
                 
-                
-                % assign result to output removing the borders
-                im2(...
-                    r0(I):rx(I), ...
-                    c0(J):cx(J), ...
-                    s0(K):sx(K) ...
-                    ) ...
-                    = aux(...
-                    (r0(I)-br0(I)+1):(end-(brx(I)-rx(I))), ...
-                    (c0(J)-bc0(J)+1):(end-(bcx(J)-cx(J))), ...
-                    (s0(K)-bs0(K)+1):(end-(bsx(K)-sx(K))) ...
-                    );
+                % assign result to output removing the borders (take into
+                % account that the function may return a SCI MAT struct or
+                % just an array)
+                if (isstruct(aux))
+                    scimat2.data(...
+                        r0(I):rx(I), ...
+                        c0(J):cx(J), ...
+                        s0(K):sx(K) ...
+                        ) ...
+                        = aux.data(...
+                        (r0(I)-br0(I)+1):(end-(brx(I)-rx(I))), ...
+                        (c0(J)-bc0(J)+1):(end-(bcx(J)-cx(J))), ...
+                        (s0(K)-bs0(K)+1):(end-(bsx(K)-sx(K))) ...
+                        );
+                else
+                    scimat2.data(...
+                        r0(I):rx(I), ...
+                        c0(J):cx(J), ...
+                        s0(K):sx(K) ...
+                        ) ...
+                        = aux(...
+                        (r0(I)-br0(I)+1):(end-(brx(I)-rx(I))), ...
+                        (c0(J)-bc0(J)+1):(end-(bcx(J)-cx(J))), ...
+                        (s0(K)-bs0(K)+1):(end-(bsx(K)-sx(K))) ...
+                        );
+                end
                 
             end
         end
